--- a/stockcollection/src/main/resources/templates/stock/stock_analyze.html
+++ b/stockcollection/src/main/resources/templates/stock/stock_analyze.html
@@ -83,14 +83,14 @@
 
 
     function toIndex0() {
-        window.location.href = "/stock/toStockCrossIncreaseEffectNew?effectType=0&stockCode=0000001"
+        window.location.href = "/stock/toStockCrossIncreaseEffectNew2?effectType=0&stockCode=000001"
     }
     function toIndex1() {
-        window.location.href = "/stock/toStockCrossIncreaseEffectNew?effectType=1&stockCode=0000001"
+        window.location.href = "/stock/toStockCrossIncreaseEffectNew2?effectType=1&stockCode=000001"
     }
 
     function toIndex2() {
-        window.location.href = "/stock/toStockCrossIncreaseEffectNewFinal"
+
     }
 
 
