--- a/stockcollection/src/main/resources/templates/stock/stock_cross_increase_effect_new2.html
+++ b/stockcollection/src/main/resources/templates/stock/stock_cross_increase_effect_new2.html
@@ -38,11 +38,11 @@
                 <thead>
                 <tr>
                     <th>stockCodesz</th>
-                    <th>本-1</th>
-                    <th>本-2</th>
-                    <th>本-3</th>
-                    <th>本-4</th>
-                    <th>本-5</th>
+                    <th>上涨后第一天</th>
+                    <th>上涨后第二天</th>
+                    <th>上涨后第三天</th>
+                    <th>上涨后第四天</th>
+                    <th>上涨后第五天</th>
 
                 </tr>
                 </thead>
