--- a/stockcollection/src/main/resources/templates/stock/stock_increase_effect_day.html
+++ b/stockcollection/src/main/resources/templates/stock/stock_increase_effect_day.html
@@ -101,7 +101,7 @@
             async: true,
             url: "/stockIncrease/getStockIncreaseEffectDay",
             data: JSON.stringify(str),
-            dataType: "text",        //返回数据形式为json
+            dataType: "text",
             contentType: "application/json",
             success: function (result) {
 
