今天是她的生日啊。我很想她

--- a/stockcollection/src/main/resources/templates/stock/index.html
+++ b/stockcollection/src/main/resources/templates/stock/index.html
@@ -21,19 +21,6 @@
 
 <div class="container" id="innerDiv">
 
-    <footer class="col-md-12 content" id="home">
-        <div class="col-lg-6 col-md-6 last">
-            <img src="../../img/5.jpg" alt="Image" class="tm-image">
-        </div>
-        <div class="col-lg-6 col-md-6 background last ">
-            <h2 class="section-title">女神推荐-涨幅</h2>
-            <p class="about-text">根据前几日的涨跌的权值来推荐</p>
-            <p class="about-text">昨日涨幅，前几日涨幅</p>
-            <div>
-                <button type="button" class="btn yellow-btn normal-btn" onclick="toIndex0()">推荐</button>
-            </div>
-        </div>
-    </footer>
 
     <footer class="col-md-12 content" >
         <div class="col-lg-6 col-md-6 last">
@@ -49,14 +36,31 @@
         </div>
     </footer>
 
+
+    <footer class="col-md-12 content" id="home">
+        <div class="col-lg-6 col-md-6 last">
+            <img src="../../img/5.jpg" alt="Image" class="tm-image">
+        </div>
+        <div class="col-lg-6 col-md-6 background last ">
+            <h2 class="section-title">女神推荐-涨幅</h2>
+            <p class="about-text">根据前几日的涨跌的权值来推荐</p>
+            <p class="about-text">昨日涨幅，前几日涨幅</p>
+            <div>
+                <button type="button" class="btn yellow-btn normal-btn" onclick="toIndex0()">推荐</button>
+            </div>
+        </div>
+    </footer>
+
+
+
     <footer class="col-md-12 content" >
         <div class="col-lg-6 col-md-6 last">
             <img src="../../img/5.jpg" alt="Image" class="tm-image">
         </div>
         <div class="col-lg-6 col-md-6 background last ">
-            <h2 class="section-title">数据分析</h2>
-            <p class="about-text">新的开始，新的机遇</p>
-            <p class="about-text">如果不行，那就从新开始。</p>
+            <h2 class="section-title">实时分析-实时的金交</h2>
+            <p class="about-text">实时的数据，实时的机遇</p>
+            <p class="about-text">基于都是给有准备的人。</p>
             <div>
                 <button type="button" class="btn yellow-btn normal-btn" onclick="toIndex4()">从新开始</button>
             </div>
@@ -108,9 +112,7 @@
 </div>
 
 <div class="text-center footer">
-    <div class="container">Copyright &copy; 2018.Company name All rights reserved.<a target="_blank"
-                                                                                     href="http://sc.chinaz.com/moban/">&#x7F51;&#x9875;&#x6A21;&#x677F;</a>
-    </div>
+    <div class="container">Copyright &copy; 2019.GWQ & CMF Company All rights reserved.</div>
 </div>
 
 <script src="../../js//jquery-3.3.1.min.js"></script>
