--- a/stockcollection/src/main/resources/templates/stock/stock_info_list.html
+++ b/stockcollection/src/main/resources/templates/stock/stock_info_list.html
@@ -105,8 +105,7 @@
 </div>
 
 <div class="text-center footer">
-    <div class="container">Copyright &copy;
-    </div>
+    <div class="container">Copyright &copy; 2019.GWQ & CMF Company All rights reserved.</div>
 </div>
 
 <script src="../../js//jquery-3.3.1.min.js"></script>
