--- a/stockcollection/src/main/resources/templates/stock/stock_cross_increase_effect_new2.html
+++ b/stockcollection/src/main/resources/templates/stock/stock_cross_increase_effect_new2.html
@@ -15,7 +15,6 @@
     <div class="container">
         <div class="navbar-header">
             <a class="navbar-brand" onclick="javascript:history.go(-1);"><</a>
-        </div>
     </div>
 </div>
 
@@ -58,10 +57,9 @@
 </div>
 
 <div class="text-center footer">
-    <div class="container">Copyright &copy; 2018.Company name All rights reserved.<a target="_blank"
-                                                                                     href="http://sc.chinaz.com/moban/">&#x7F51;&#x9875;&#x6A21;&#x677F;</a>
-    </div>
+    <div class="container">Copyright &copy; 2019.GWQ & CMF Company All rights reserved.</div>
 </div>
+
 
 <script src="../../js//jquery-3.3.1.min.js"></script>
 <script src="../../js//bootstrap.min.js"></script>
