--- a/stockcollection/src/main/resources/templates/stock/stock_increase_effect.html
+++ b/stockcollection/src/main/resources/templates/stock/stock_increase_effect.html
@@ -74,9 +74,7 @@
 </div>
 
 <div class="text-center footer">
-    <div class="container">Copyright &copy; 2018.Company name All rights reserved.<a target="_blank"
-                                                                                     href="http://sc.chinaz.com/moban/">&#x7F51;&#x9875;&#x6A21;&#x677F;</a>
-    </div>
+    <div class="container">Copyright &copy; 2019.GWQ & CMF Company All rights reserved.</div>
 </div>
 
 <script src="../../js//jquery-3.3.1.min.js"></script>
