--- a/stockcollection/src/main/resources/templates/stock/stock_increase_effect_day.html
+++ b/stockcollection/src/main/resources/templates/stock/stock_increase_effect_day.html
@@ -80,8 +80,9 @@
 </div>
 
 <div class="text-center footer">
-
+    <div class="container">Copyright &copy; 2019.GWQ & CMF Company All rights reserved.</div>
 </div>
+
 
 
 <script>
