--- a/stockcollection/src/main/resources/templates/stock/stock_price.html
+++ b/stockcollection/src/main/resources/templates/stock/stock_price.html
@@ -10,7 +10,8 @@
 <div style="width: 96%;margin-left:2%;float: left;height: 50px;margin-top: 10px;">
     <input class="searchInputDiv" id="stockCode" name="stockCode" placeholder="请输入要查询的股票编码: 如000001">
    <select id="limitNum" class="searchInputDiv" onchange="init()">
-       <option value="100" selected="selected">100</option>
+       <option value="50" selected="selected">50</option>
+       <option value="100">100</option>
        <option value="200">200</option>
        <option value="300">300</option>
        <option value="500">500</option>
@@ -25,7 +26,12 @@
 <div class="flowDiv">
     <div id="main2" style="height:800px;width: 2000px;"></div>
 </div>
-x
+
+
+<div class="text-center footer">
+    <div class="container">Copyright &copy; 2019.GWQ & CMF Company All rights reserved.</div>
+</div>
+
 <!-- ECharts单文件引入 -->
 <script src="http://echarts.baidu.com/build/dist/echarts-all.js"></script>
 <script src="../js/common.js"></script>
@@ -155,3 +161,4 @@ x
 
 </script>
 </body>
+</html>
