--- a/stockcollection/src/main/resources/templates/stock/stock_zdf.html
+++ b/stockcollection/src/main/resources/templates/stock/stock_zdf.html
@@ -11,7 +11,8 @@
     <input class="searchInputDiv" id="stockCode" name="stockCode" placeholder="请输入要查询的股票编码: 如000001">
 
     <select id="limitNum" class="searchInputDiv" onchange="init()">
-        <option value="100" selected="selected">100</option>
+        <option value="50" selected="selected">50</option>
+        <option value="100">100</option>
         <option value="200">200</option>
         <option value="300">300</option>
         <option value="500">500</option>
@@ -26,7 +27,12 @@
 <div class="flowDiv">
     <div id="main" style="height:800px;width: 5000px;"></div>
 </div>
-x
+
+
+<div class="text-center footer">
+    <div class="container">Copyright &copy; 2019.GWQ & CMF Company All rights reserved.</div>
+</div>
+
 
 <!-- ECharts单文件引入 -->
 <script src="http://echarts.baidu.com/build/dist/echarts-all.js"></script>
@@ -46,8 +52,8 @@ x
         if (stockCode == "" || stockCode == undefined)
             stockCode = "000001"
 
-        var limitnum =$("#limitNum").val();
-        var str = {"stockCode": stockCode,"limitNum":limitnum, "stockBeginTime": "", "stockEndTime": ""}
+        var limitnum = $("#limitNum").val();
+        var str = {"stockCode": stockCode, "limitNum": limitnum, "stockBeginTime": "", "stockEndTime": ""}
         // 基于准备好的dom，初始化echarts图表
         var myChart = echarts.init(document.getElementById('main'));
 
@@ -124,7 +130,7 @@ x
     }
 
 
-    $('#stockCode').bind('keyup', function(event) {
+    $('#stockCode').bind('keyup', function (event) {
         if (event.keyCode == "13") {
             //回车执行查询
             $('#searchInputButton').click();
@@ -133,3 +139,4 @@ x
 
 </script>
 </body>
+</html>
