实时金叉，预测涨幅

--- a/stockcollection/src/main/resources/templates/stock/stock_analyze.html
+++ b/stockcollection/src/main/resources/templates/stock/stock_analyze.html
@@ -26,9 +26,9 @@
             <img src="../../img/5.jpg" alt="Image" class="tm-image">
         </div>
         <div class="col-lg-6 col-md-6 background last ">
-            <h2 class="section-title">金叉-每天影响</h2>
-            <p class="about-text">金叉-每天影响</p>
-            <p class="about-text">金叉金叉</p>
+            <h2 class="section-title">金叉-实时推荐</h2>
+            <p class="about-text">金叉-实时推荐</p>
+            <p class="about-text">实时数据</p>
             <div>
                 <button type="button" class="btn yellow-btn normal-btn" onclick="toIndex0()">推荐</button>
             </div>
@@ -81,7 +81,7 @@
 
 
     function toIndex0() {
-        window.location.href = "/stock/toStockCrossIncreaseEffectNew2?effectType=0&stockCode=000001"
+        window.location.href = "/stock/toStockActualtime"
     }
     function toIndex1() {
         window.location.href = "/stock/toStockCrossIncreaseEffectNew2?effectType=1&stockCode=000001"
