展示内容优化

--- a/stockcollection/src/main/resources/templates/stock/index.html
+++ b/stockcollection/src/main/resources/templates/stock/index.html
@@ -123,7 +123,7 @@
         window.location.href = "/stock/toStockIncrease"
     }
     function toIndex1() {
-        window.location.href = "/stock/toStockCross?crossType=GOLD_CROSS"
+        window.location.href = "/stock/toStockCross?crossType=11"
     }
 
     function toIndex2() {
