--- a/stockcollection/src/main/resources/templates/stock/stock_cross.html
+++ b/stockcollection/src/main/resources/templates/stock/stock_cross.html
@@ -58,13 +58,15 @@
 
                 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 pad-l-3">
                     <div class="form-group contact-field">
-                        <input name="spjmax" type="email" class="form-control" id="dayNum" placeholder="限定日期..." required value="5">
+                        <input name="spjmax" type="email" class="form-control" id="dayNum" placeholder="限定日期..." required value="2">
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 pad-l-3">
                     <select  class="form-control" id="crossType">
-                        <option value="GOLD_CROSS" selected="selected">金叉</option>
-                        <option value="DEAD_CROSS">死叉</option>
+                        <option value="11" selected="selected">金叉 0上</option>
+                        <option value="10">金叉 0下</option>
+                        <option value="01">死叉 0上</option>
+                        <option value="00">死叉 0下</option>
                     </select>
                 </div>
 
