调整界面展示

--- a/stockcollection/src/main/resources/templates/stock/stock_actualtime.html
+++ b/stockcollection/src/main/resources/templates/stock/stock_actualtime.html
@@ -146,7 +146,7 @@
 
                     temphtml += "<td><a target='_blank' href='/stock/toStockInfoList?stockCode="+jsonObj[i].stockCode+"'>综合</a></td>";
                     temphtml += "<td><a target='_blank' href='/stock/toStockMacd?stockCode="+jsonObj[i].stockCode+"'>MACD</a></td>";
-                    temphtml += "<td><a target='_blank' href='/stock/toStockInfoList?stockCode="+jsonObj[i].stockCode+"'>预测涨幅</a></td>";
+                    temphtml += "<td><a target='_blank' href='/stock/toStockCrossIncreaseEffectNew2?stockCode="+jsonObj[i].stockCode+"'>预测涨幅</a></td>";
 
 
                 //     temphtml += "<td>" + jsonObj[i].zdf_15.toFixed(2) + "</td>";
